# Spiking-NN-Rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/configuration/: configurations2.json  layers2.json  paths.json  resilience2.json  weights2.json
src/snn/: console_input_nn_creator.rs  json_adapter.rs  layer.rs  mod.rs  nn.rs  resilience.rs
src/snn/model/: heap.rs  lif.rs  logic_circuit.rs  mod.rs
tests/: configurations.json  configurations2.json  configurations3.json  heap_test.rs  input_spikes.json  input_spikes2.json  input_spikes3.json  layer_configuration.json  layers.json  layers3.json  logic_circuit_test.rs  resilience.json  resilience2.json  test.rs  weights.json  weights3.json
