[package]
name = "spiking_nn_resilience"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"  # Usa l'ultima versione disponibile

nalgebra = "0.32.3"
ndarray = "0.15.6"
rand = "0.8"
